# preset-web-framework

./: .gitignore  docker-compose.dev.yml
backend/: .env.example  README.md  main.py  pyproject.toml  raw_sql_demo.ipynb
backend/core/: env.py  settings.py  urls.py
backend/file_manager/: admin.py  api_views.py  models.py  urls.py
backend/file_manager/migrations/: 0001_initial.py  0002_privatefile_created_at_privatefile_folder_and_more.py
backend/table_reserves/: apps.py  models.py  urls.py  views.py
backend/table_reserves/migrations/: 0001_initial.py  0002_table_height.py
backend/table_reserves/tutorials/gemini-tutorial/: tutorial-3.md
backend/table_reserves/tutorials/openai-tutorial/: README.md  tutorial-1-api-flow-101.md  tutorial-2-get-api--db.md  tutorial-3-post-body--createupdate.md
backend/user/: urls.py
backend/user/api_views/: me_api.py
backend/user/migrations/: 0001_initial.py
documents/: setup_agy_command.md
documents/django-api-tutorial/: README.md  tutorial-1.md  tutorial-2.md
frontend/: README.md  nuxt.config.ts  package.json
frontend/app/components/: app-dialog.vue  app-error-dialog.vue  app-loader.vue  app-snackbar.vue  non-field-error.vue
frontend/app/interfaces/: user.ts
frontend/app/layouts/: blank.vue  customer.vue  default.vue
frontend/app/middleware/: auth.global.ts
frontend/app/pages/: customer.vue  index.vue  login.vue
frontend/app/plugins/: auth.ts  currency.ts  datetime.ts  helper.ts  rules.ts  vuetify.ts
frontend/app/repositories/: AuthRepository.ts  BaseRepository.ts  FileRepository.ts
(+12 files in other folders)
